fix: gap on right side of toolbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,7 @@
     box-shadow: 0 0 0 1px var(--background-primary);
     margin-bottom: 1em;
     .is-mobile & {
-        margin: 0.4em 0.4em 1em 0;
+        margin: 0.4em 0 1em 0;
     }
     &:hover {
         /* fix: (#14) flickering problem experienced with Banner plugin beta in use */
